--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.SeekhoAssignment"
         tools:targetApi="31">
         <activity
-            android:name="com.test.seekhoassignment.ui.AnimeDetailActivity"
+            android:name="com.test.seekhoassignment.ui.AnimeDetailsActivity"
             android:exported="false" />
         <activity
             android:name="com.test.seekhoassignment.ui.MainActivity"
